2007-11-06 Jim Garlick <garlick.jim@gmail.com>

	* src/vxi11.x : New from http://www.agilent.com/find/linux.

	* Makefile : Build vxi11 support with rpcgen.

	* src/gpib.c : Add vxi11 support.

	* : Rename local wrapper functions from gpib_ib* to gpib_*.

	* README.vxi : Description of VXI-11 support.

2006-10-01 Jim Garlick <garlick.jim@gmail.com>

	* src/hp603x.[ch] : New (incomplete).

	* src/gpsh.c : Simple shell for testing devices.
	
	* src/gpib.[ch] : Add opaque gd_t type.

	* src/sr620.c : Add save/restore and graph functions.

	* src/tek2230.c: Removed (mine died !)

2006-09-08 Jim Garlick <garlick@speakeasy.net>

	* src/util.[ch]: Use void * for read/write buffers.

	* src/gpib.c: Fix error message typo.

	* src/sr620.[ch]: New (incomplete).

2006-05-13 Jim Garlick <garlick@speakeasy.net>

	* man/hp3488.1: New.

	* man/Makefile: added hp3488.1

	* src/hp3488.[ch]: 
	- hp3488_checksrq(): interpret error register contents.
	- hp3488_list(): include descriptions in slot listing.
	- add --selftest option.
	- _disambiguate_ctype(): turn off display while probing.
	- hp3488_open()/hp3488_close(): pass entire channel list in one command.
	- hp3488_query_caddr(): report query result as 1 (closed) or 0 (open).

2006-05-12 Jim Garlick <garlick@speakeasy.net>

	* src/hp3488.[ch]: New.

	* src/Makefile: hp3488 support

	* examples/gpib.conf: includes hp3488 entry. 

2006-02-28 Jim Garlick <garlick@speakeasy.net>

	* src/hp1630.c: drop \r\n in model comparison

	* : tag gpib-utils-1-2

2006-02-26 Jim Garlick <garlick@speakeasy.net>

	* src/Makefile: fix link line for r5005.

	* src/hp1630.c: workaround for HP1630D firmware bug [Adam Goldman].

	* src/gpib.c: comment out ibrd() EOI assertion and remove short 
	read and write handling which probably can't happen.

2006-02-17 Jim Garlick <garlick@speakeasy.net>

	* gpib-utils.spec: Update for Fedora packaging guidelines.

2006-02-13 Jim Garlick <garlick@speakeasy.net>
